<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/addNewPlayer"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/red_borders2"
        android:fontFamily="@font/aclonica"
        android:paddingTop="10sp"
        android:text="@string/add_new_player"
        android:textAlignment="center"
        android:textColor="#FD0303"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="295dp"
        android:layout_height="368dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewPlayer"
        tools:background="@drawable/red_borders2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="268dp"
            android:layout_height="268dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="40dp"
            android:background="#97020E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextField"
                style="@style/WhiteHintEditText"
                android:layout_width="233dp"
                android:layout_height="54dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/blackborder"
                android:ems="10"
                android:hint="@string/enter_player_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#EDE8E8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,RtlSymmetry" />

            <Button
                android:id="@+id/savePlayerBtn"
                android:layout_width="162dp"
                android:layout_height="53dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="68dp"
                android:text="@string/save_player"
                android:textColor="#090808"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextField" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginEnd="87dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/savePlayerBtn"
                tools:textSize="17sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/tic_tac_toe"
        android:textAlignment="center"
        android:textColor="#F60202"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>