<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403C3C">

    <TextView
        android:id="@+id/player2ScoreLabel"
        android:layout_width="366dp"
        android:layout_height="31dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/aclonica"
        android:paddingStart="2sp"
        android:text="Player 2 - Score : 0 - you are : O"
        android:textColor="#FBF7F7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1ScoreLabel"
        tools:ignore="HardcodedText,RtlSymmetry,TextSizeCheck" />

    <TextView
        android:id="@+id/player1ScoreLabel"
        android:layout_width="372dp"
        android:layout_height="28dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/aclonica"
        android:paddingLeft="2sp"
        android:text="Player 1 - Score : 0 - you are : X"
        android:textColor="#FBF7F7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player2ScoreLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />

    <View
        android:id="@+id/divider"
        android:layout_width="443dp"
        android:layout_height="13dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLabelDisplay2"
        tools:background="#C80303" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="341dp"
        android:layout_height="553dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/system_neutral1_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="NewApi">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ticTacToeGrid"
            android:layout_width="323dp"
            android:layout_height="460dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="13dp"
            android:background="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_marginRight="20sp">

            <View
                android:id="@+id/divider5"
                android:layout_width="9dp"
                android:layout_height="294dp"
                android:layout_marginStart="84dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="108dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="#E6BA36" />

            <View
                android:id="@+id/divider3"
                android:layout_width="9dp"
                android:layout_height="294dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="49dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="#E6BA36" />

            <View
                android:id="@+id/divider1"
                android:layout_width="245dp"
                android:layout_height="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="148dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="#E6BA36" />

            <View
                android:id="@+id/divider2"
                android:layout_width="245dp"
                android:layout_height="10dp"
                android:layout_marginStart="41dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="41dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="#E6BA36" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="1dp"
                android:clickable="true"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintBottom_toTopOf="@+id/divider1"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintBottom_toTopOf="@+id/divider1"
                app:layout_constraintEnd_toStartOf="@+id/divider5"
                app:layout_constraintStart_toEndOf="@+id/divider3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="39dp"
                android:clickable="true"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider5"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:clickable="true"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintEnd_toStartOf="@+id/divider5"
                app:layout_constraintStart_toEndOf="@+id/divider3"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/mainMenuBtn"
                android:layout_width="119dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/main_menu"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Button
                android:id="@+id/resetBoardBtn"
                android:layout_width="119dp"
                android:layout_height="48dp"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/reset"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toEndOf="@+id/mainMenuBtn"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:layout_marginLeft="3sp" />

            <TextView
                android:id="@+id/textViewNo3"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintBottom_toTopOf="@+id/divider1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider5"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="3dp"
                android:clickable="true"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toStartOf="@+id/divider5"
                app:layout_constraintStart_toEndOf="@+id/divider3"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="39dp"
                android:clickable="true"
                android:fontFamily="@font/creepster"
                android:textAlignment="center"
                android:textColor="#B10202"
                android:textSize="85sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider5"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="340dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:background="#BF0707"
            android:text="Player turn"
            android:textAlignment="center"
            android:textColor="#E3BD04"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="25dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/scoreLabelDisplay"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="3sp"
        android:text="@string/score_x"
        android:textColor="#F60404"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2ScoreLabel"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/scoreLabelDisplay2"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="3sp"
        android:text="@string/score_o"
        android:textColor="#F60404"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreLabelDisplay"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>